--- a/_content/Stage_of_Struggle_03/First_Lame_Duck_Session_Dangers.adoc
+++ b/_content/Stage_of_Struggle_03/First_Lame_Duck_Session_Dangers.adoc
@@ -19,14 +19,14 @@ Such a move requires only a bare majority vote in the current (119th) House of R
 Republicans might coalesce around this move because of fears of retribution by MAGA powers if they fail to go along. 
 
 While this may seem to be a relatively low threat because of its historical rarity, it is nonetheless a high risk threat. 
-It is high risk because the difference in a world where the MAGA regime retains control over both houses of Congress during the 120th session and one in which they do not can tip the balance of whether we have a constitutional break or not. footnotel[See: <</Election2028/The_Coming_Constitutional_Hack.adoc#,The coming Constitutional Hack.>>
+It is high risk because the difference in a world where the MAGA regime retains control over both houses of Congress during the 120th session and one in which they do not can tip the balance of whether we have a constitutional break or not. footnote:[See: <</content/Election2028/The_Coming_Constitutional_Hack.adoc#,The coming Constitutional Hack.>>]
 Therefore we must make adequate plans. 
 
 == Upholding the Will of the People, Part 1:
 
 First and foremost, we need the largest electoral win possible in sufficient numbers of Republican districts so as to morally influence those memebers not to vote themselves into place. 
 
-This is <</Election_2028/Before_The_Election/Before_The_Election_Overview.adoc#,described elsewhere in Project Liberty 2029.>> 
+This is <</content/Election_2028/Before_The_Election/Before_The_Election_Overview.adoc#,described elsewhere in Project Liberty 2029.>> 
 
 == Upholding the Will of the People, Part 2:
 
