--- a/_content/Contributing/030_How_To_Add_Or_Edit_Pages.adoc
+++ b/_content/Contributing/030_How_To_Add_Or_Edit_Pages.adoc
@@ -116,7 +116,11 @@ If you know markdown, you can use it, because asciidoc includes it.
 
 Here are the other documents in this suite of docs for helping to on-board contributors. 
 
-<</content/Contributing/030_How_To_Add_Or_Edit_Pages.adoc#,How to Add or Edit Pages.>>
+<</content/Contributing/010_Getting_Started_Helping.adoc#,Getting Started Contributing.>>
+
+<</content/Contributing/020_Overview_Of_The_Environment.adoc#,Overview of the Environment.>>
+
+(This document: Overview of the Environment.)
 
 <</content/Contributing/040_How_To_Publish_Your_Edits.adoc#,How to Publish Your Contributions.>>
 
