--- a/_content/Contributing/040_How_To_Publish_Your_Edits.adoc
+++ b/_content/Contributing/040_How_To_Publish_Your_Edits.adoc
@@ -36,9 +36,13 @@ The process involves:
 
 Here are the other documents in this suite of docs for helping to on-board contributors. 
 
-<</content/Contributing/030_How_To_Add_Or_Edit_Pages.adoc#,How to Add or Edit Pages.>>
+<</content/Contributing/010_Getting_Started_Helping.adoc#,Getting Started Contributing.>>
 
-<</content/Contributing/040_How_To_Publish_Your_Edits.adoc#,How to Publish Your Contributions.>>
+<</content/Contributing/020_Overview_Of_The_Environment.adoc#,Overview of the Environment.>>
+
+<</content/Contributing/030_How_To_Add_Or_Edit_Pages.adoc#,How to Add or Edit Pages on GitHub.>>
+
+(This document: How to Publish Your Contributions.)
 
 <</content/Contributing/050_Guidelines_for_Pages.adoc#,Guidelines and Standards for Pages.>>
 
